Pre-Merge