@@ -123,7 +123,7 @@ public class PacketHandler extends MessageToMessageCodec<FMLProxyPacket, PacketB
 				throw new NullPointerException("Packet not registered for discriminator : " + discriminator);
 			
 			//Create an empty packet and decode our packet data into it
-			PacketBase packet = cl.newInstance();
+			PacketBase packet = cl.getConstructor().newInstance();
 			packet.decodeInto(ctx, encodedData.slice());
 			//Check the side and handle our packet accordingly
 			switch(FMLCommonHandler.instance().getEffectiveSide())
@@ -205,7 +205,6 @@ public class PacketHandler extends MessageToMessageCodec<FMLProxyPacket, PacketB
 		registerPacket(PacketRepairDriveable.class);
 		registerPacket(PacketRoundFinished.class);
 		registerPacket(PacketSeatUpdates.class);
-		registerPacket(PacketShotData.class);
 		registerPacket(PacketTeamInfo.class);
 		registerPacket(PacketTeamSelect.class);
 		registerPacket(PacketVehicleControl.class);
@@ -297,7 +296,7 @@ public class PacketHandler extends MessageToMessageCodec<FMLProxyPacket, PacketB
 	/**
 	 * Send a packet to all players
 	 */
-	public void sendToAll(Packet packet)
+	public void sendToAll(Packet<?> packet)
 	{
 		FMLCommonHandler.instance().getMinecraftServerInstance().getPlayerList().sendPacketToAllPlayers(packet);
 	}
@@ -305,7 +304,7 @@ public class PacketHandler extends MessageToMessageCodec<FMLProxyPacket, PacketB
 	/**
 	 * Send a packet to a player
 	 */
-	public void sendTo(Packet packet, EntityPlayerMP player)
+	public void sendTo(Packet<?> packet, EntityPlayerMP player)
 	{
 		player.connection.sendPacket(packet);
 	}
@@ -313,7 +312,7 @@ public class PacketHandler extends MessageToMessageCodec<FMLProxyPacket, PacketB
 	/**
 	 * Send a packet to all around a point
 	 */
-	public void sendToAllAround(Packet packet, NetworkRegistry.TargetPoint point)
+	public void sendToAllAround(Packet<?> packet, NetworkRegistry.TargetPoint point)
 	{
 		FMLCommonHandler.instance().getMinecraftServerInstance().getPlayerList().sendToAllNearExcept(null, point.x, point.y, point.z, point.range, point.dimension, packet);
 	}
@@ -321,7 +320,7 @@ public class PacketHandler extends MessageToMessageCodec<FMLProxyPacket, PacketB
 	/**
 	 * Send a packet to all in a dimension
 	 */
-	public void sendToDimension(Packet packet, int dimensionID)
+	public void sendToDimension(Packet<?> packet, int dimensionID)
 	{
 		FMLCommonHandler.instance().getMinecraftServerInstance().getPlayerList().sendPacketToAllPlayersInDimension(packet, dimensionID);
 	}
@@ -329,7 +328,7 @@ public class PacketHandler extends MessageToMessageCodec<FMLProxyPacket, PacketB
 	/**
 	 * Send a packet to the server
 	 */
-	public void sendToServer(Packet packet)
+	public void sendToServer(Packet<?> packet)
 	{
 		Minecraft.getMinecraft().player.connection.sendPacket(packet);
 	}
